updated two towers

--- a/TwoTowers.ipynb
+++ b/TwoTowers.ipynb
@@ -2,18 +2,21 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 61,
+   "execution_count": 48,
    "metadata": {},
    "outputs": [],
    "source": [
     "import torch\n",
     "import torch.nn as nn\n",
-    "import pickle"
+    "import pickle\n",
+    "from torch.nn.utils.rnn import pad_sequence, pack_padded_sequence, pad_packed_sequence\n",
+    "import torch.nn.functional as F\n",
+    "\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 62,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -95,7 +98,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 66,
+   "execution_count": 31,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -114,8 +117,6 @@
     "        The seq_length is number of examples\n",
     "        '''\n",
     "        #Initiates the hidden layer for the whole text\n",
-    "        print(ordered_text.shape())\n",
-    "        ordered_text = ordered_text.unsqueeze(1)  # Adds a batch dimension\n",
     "        hidden = torch.zeros(1, ordered_text.size(1), self.hidden_size)\n",
     "        # hidden=torch.zeros (ordered_text.size(1), self.hidden_size)\n",
     "        rnn_output, hidden = self.rnn_cell(ordered_text, hidden)\n",
@@ -137,11 +138,11 @@
     "# To prep the data\n",
     "validationData = []\n",
     "\n",
-    "with open('tokenised_triplets/test.pkl', 'rb') as file:\n",
+    "with open('test_tokenised_triplets.pkl', 'rb') as file:\n",
     "    testData = pickle.load(file)\n",
-    "with open('tokenised_triplets/training.pkl', 'rb') as file:\n",
+    "with open('training_tokenised_triplets.pkl', 'rb') as file:\n",
     "    trainingData = pickle.load(file)\n",
-    "with open('tokenised_triplets/validation.pkl', 'rb') as file:\n",
+    "with open('validation_tokenised_triplets.pkl', 'rb') as file:\n",
     "    validationData = pickle.load(file)\n",
     "\n",
     "    \n",
@@ -151,114 +152,145 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 64,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "tensor([[ 0.0450, -0.1094,  0.2346,  ...,  0.1490, -0.1885, -0.0019],\n",
-      "        [ 0.0450, -0.1094,  0.2346,  ...,  0.1490, -0.1885, -0.0019],\n",
-      "        [ 0.0450, -0.1094,  0.2346,  ...,  0.1490, -0.1885, -0.0019],\n",
-      "        ...,\n",
-      "        [-0.0671, -0.1579,  0.3436,  ...,  0.0970, -0.0428, -0.2825],\n",
-      "        [-0.0671, -0.1579,  0.3436,  ...,  0.0970, -0.0428, -0.2825],\n",
-      "        [-0.0671, -0.1579,  0.3436,  ...,  0.0970, -0.0428, -0.2825]])\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
-    "# Take the query out of the triplet \n",
-    "query_list = []\n",
-    "for (query, _, _ ) in trainingData:\n",
-    "#  This gives tensor([w1, w2, w3,...wn]) for each individual query\n",
-    "# Take the query out of a tensor form and keep as a list\n",
-    "    query_as_list = query.tolist()\n",
-    "# Then iterate over all of the triplets and pull them all out \n",
-    "    query_list.append(query_as_list)\n",
-    "# Put them all in one list \n",
-    "# Make this list a tensor\n",
-    "tensor_query_list = torch.tensor(query_list)\n",
-    "print(tensor_query_list)\n",
-    "# Put into model "
+    "# Step 1 - Get the dataset from MS Marco and put into data frame\n",
+    "\n",
+    "training_query_dataset = pd.read_parquet(\"./v1.1-data/train.parquet\") \n",
+    "\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 71,
+   "execution_count": 53,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "torch.Size([814, 128])\n",
-      "torch.Size([128])\n",
-      "tensor([ 4.5037e-02, -1.0937e-01,  2.3464e-01,  2.8838e-01,  2.1045e-01,\n",
-      "        -3.6086e-02, -3.6875e-02, -1.3356e-01, -1.8880e-02, -3.9864e-02,\n",
-      "         2.0278e-01, -9.6033e-04, -1.8266e-01,  4.3697e-02,  7.3484e-02,\n",
-      "         1.6414e-01, -1.6777e-01,  1.0787e-01, -2.3564e-01,  3.5150e-01,\n",
-      "         5.3646e-02, -1.8614e-01, -2.8010e-01, -3.0639e-01, -1.3082e-01,\n",
-      "         6.8598e-02, -1.4798e-01,  3.2496e-02,  1.7219e-01, -8.9243e-02,\n",
-      "        -1.1667e-01,  7.7255e-03,  6.9057e-02, -2.2016e-04,  5.5669e-02,\n",
-      "         1.9851e-01,  8.6366e-02, -1.1740e-01, -6.8780e-02, -1.2199e-01,\n",
-      "        -1.3029e-01,  4.2058e-01,  9.6036e-02,  7.6770e-02,  2.1897e-01,\n",
-      "        -1.2299e-01, -8.5546e-02,  3.8775e-02,  1.7612e-01,  2.7531e-01,\n",
-      "        -3.0188e-01,  6.1773e-02,  2.6999e-01,  1.7055e-01,  3.0800e-01,\n",
-      "         1.4514e-01,  1.6264e-02, -2.5426e-01, -2.3492e-01,  1.1858e-01,\n",
-      "        -5.6707e-02, -4.4231e-02,  1.8520e-01, -8.9252e-02,  1.6647e-01,\n",
-      "         8.2960e-02, -1.3074e-01,  1.8039e-01, -3.1456e-02,  1.3525e-01,\n",
-      "        -3.5984e-01, -1.1043e-01, -2.3497e-01, -1.6297e-02,  1.1886e-01,\n",
-      "        -3.3533e-01, -3.4823e-02,  1.1884e-02,  1.4163e-01,  2.0241e-01,\n",
-      "        -2.0603e-01, -3.4023e-01,  6.2919e-02,  1.9404e-01,  4.4208e-02,\n",
-      "         8.4311e-02,  3.5661e-01, -1.1609e-01,  7.5594e-02,  4.2984e-01,\n",
-      "        -6.0675e-02, -1.6645e-01,  1.3505e-01, -2.5153e-01, -1.0624e-01,\n",
-      "         1.4267e-01, -5.7441e-02, -2.9146e-01,  1.3726e-01,  1.5721e-01,\n",
-      "        -8.1541e-02,  1.0250e-01, -1.7980e-01,  2.9699e-02,  3.6201e-02,\n",
-      "        -6.3940e-03, -1.3988e-01,  7.1402e-02,  7.3059e-02, -2.4446e-02,\n",
-      "        -1.2914e-01, -9.5205e-02, -3.2620e-01,  1.3743e-01,  8.8643e-02,\n",
-      "        -1.7398e-01,  5.7910e-02,  2.2490e-01,  5.9370e-02, -1.3692e-02,\n",
-      "        -1.3146e-01, -1.0018e-01, -1.2550e-01,  2.3781e-02, -3.0144e-01,\n",
-      "         1.4901e-01, -1.8852e-01, -1.9446e-03])\n"
+      "<class 'numpy.ndarray'>\n",
+      "<class 'torch.Tensor'>\n"
      ]
     },
     {
      "ename": "TypeError",
-     "evalue": "'torch.Size' object is not callable",
+     "evalue": "can only concatenate list (not \"Tensor\") to list",
      "output_type": "error",
      "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
-      "Cell \u001b[1;32mIn[71], line 9\u001b[0m\n\u001b[0;32m      7\u001b[0m \u001b[38;5;28mprint\u001b[39m(tensor_query_list[\u001b[38;5;241m0\u001b[39m]\u001b[38;5;241m.\u001b[39mshape)\n\u001b[0;32m      8\u001b[0m \u001b[38;5;28mprint\u001b[39m(tensor_query_list[\u001b[38;5;241m0\u001b[39m])\n\u001b[1;32m----> 9\u001b[0m output \u001b[38;5;241m=\u001b[39m \u001b[43mqueryRNN\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mforward\u001b[49m\u001b[43m(\u001b[49m\u001b[43mtensor_query_list\u001b[49m\u001b[43m)\u001b[49m\n\u001b[0;32m     10\u001b[0m \u001b[38;5;66;03m# output.forward(trainintensor_query_listData[0][0])\u001b[39;00m\n\u001b[0;32m     12\u001b[0m \u001b[38;5;28mprint\u001b[39m(output)\n",
-      "Cell \u001b[1;32mIn[66], line 16\u001b[0m, in \u001b[0;36mfullRNN.forward\u001b[1;34m(self, ordered_text)\u001b[0m\n\u001b[0;32m     10\u001b[0m \u001b[38;5;250m\u001b[39m\u001b[38;5;124;03m'''\u001b[39;00m\n\u001b[0;32m     11\u001b[0m \u001b[38;5;124;03mThis functions defines forward prop through our RNN network.\u001b[39;00m\n\u001b[0;32m     12\u001b[0m \u001b[38;5;124;03mThe input is a tensor of shape (seq_length, batch_size, input_size)\u001b[39;00m\n\u001b[0;32m     13\u001b[0m \u001b[38;5;124;03mThe seq_length is number of examples\u001b[39;00m\n\u001b[0;32m     14\u001b[0m \u001b[38;5;124;03m'''\u001b[39;00m\n\u001b[0;32m     15\u001b[0m \u001b[38;5;66;03m#Initiates the hidden layer for the whole text\u001b[39;00m\n\u001b[1;32m---> 16\u001b[0m \u001b[38;5;28mprint\u001b[39m(\u001b[43mordered_text\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mshape\u001b[49m\u001b[43m(\u001b[49m\u001b[43m)\u001b[49m)\n\u001b[0;32m     17\u001b[0m ordered_text \u001b[38;5;241m=\u001b[39m ordered_text\u001b[38;5;241m.\u001b[39munsqueeze(\u001b[38;5;241m1\u001b[39m)  \u001b[38;5;66;03m# Adds a batch dimension\u001b[39;00m\n\u001b[0;32m     18\u001b[0m hidden \u001b[38;5;241m=\u001b[39m torch\u001b[38;5;241m.\u001b[39mzeros(\u001b[38;5;241m1\u001b[39m, ordered_text\u001b[38;5;241m.\u001b[39msize(\u001b[38;5;241m1\u001b[39m), \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39mhidden_size)\n",
-      "\u001b[1;31mTypeError\u001b[0m: 'torch.Size' object is not callable"
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
+      "Cell \u001b[0;32mIn[53], line 27\u001b[0m\n\u001b[1;32m     24\u001b[0m \u001b[38;5;28mprint\u001b[39m(\u001b[38;5;28mtype\u001b[39m(query[\u001b[38;5;241m0\u001b[39m]))\n\u001b[1;32m     25\u001b[0m \u001b[38;5;28mprint\u001b[39m(\u001b[38;5;28mtype\u001b[39m(relevant_doc[\u001b[38;5;241m0\u001b[39m]))\n\u001b[0;32m---> 27\u001b[0m query_list \u001b[38;5;241m=\u001b[39m torch\u001b[38;5;241m.\u001b[39mtensor(\u001b[43mpad\u001b[49m\u001b[43m(\u001b[49m\u001b[43mquery_list\u001b[49m\u001b[43m)\u001b[49m)\n\u001b[1;32m     28\u001b[0m relevant_doc_list \u001b[38;5;241m=\u001b[39m torch\u001b[38;5;241m.\u001b[39mtensor(pad(relevant_doc_list))\n\u001b[1;32m     29\u001b[0m irrelevant_doc_list \u001b[38;5;241m=\u001b[39m torch\u001b[38;5;241m.\u001b[39mtensor(pad(irrelevant_doc_list))\n",
+      "Cell \u001b[0;32mIn[53], line 20\u001b[0m, in \u001b[0;36mpad\u001b[0;34m(list_of_lists)\u001b[0m\n\u001b[1;32m     17\u001b[0m max_length \u001b[38;5;241m=\u001b[39m \u001b[38;5;28mmax\u001b[39m(\u001b[38;5;28mlen\u001b[39m(lst) \u001b[38;5;28;01mfor\u001b[39;00m lst \u001b[38;5;129;01min\u001b[39;00m list_of_lists)\n\u001b[1;32m     19\u001b[0m \u001b[38;5;66;03m# Pad each list to the max length by adding 0s to the front\u001b[39;00m\n\u001b[0;32m---> 20\u001b[0m padded_lists \u001b[38;5;241m=\u001b[39m [\u001b[43m[\u001b[49m\u001b[38;5;241;43m0\u001b[39;49m\u001b[43m]\u001b[49m\u001b[38;5;241;43m*\u001b[39;49m\u001b[43m(\u001b[49m\u001b[43mmax_length\u001b[49m\u001b[43m \u001b[49m\u001b[38;5;241;43m-\u001b[39;49m\u001b[43m \u001b[49m\u001b[38;5;28;43mlen\u001b[39;49m\u001b[43m(\u001b[49m\u001b[43mlst\u001b[49m\u001b[43m)\u001b[49m\u001b[43m)\u001b[49m\u001b[43m \u001b[49m\u001b[38;5;241;43m+\u001b[39;49m\u001b[43m \u001b[49m\u001b[43mlst\u001b[49m \u001b[38;5;28;01mfor\u001b[39;00m lst \u001b[38;5;129;01min\u001b[39;00m list_of_lists]\n\u001b[1;32m     22\u001b[0m \u001b[38;5;28;01mreturn\u001b[39;00m padded_lists\n",
+      "\u001b[0;31mTypeError\u001b[0m: can only concatenate list (not \"Tensor\") to list"
      ]
     }
    ],
+   "source": [
+    "\n",
+    "# Take the query out of the triplet \n",
+    "query_list = []\n",
+    "relevant_doc_list = []\n",
+    "irrelevant_doc_list = []\n",
+    "for (query, relevant_doc, irrelevant_doc) in trainingData:\n",
+    "# This gives tensor([w1, w2, w3,...wn]) for each individual query\n",
+    "# Take the query out of a tensor form and keep as a list\n",
+    "# Then iterate over all of the triplets and pull them all out\n",
+    "    query_list.append(torch.tensor(query))\n",
+    "    relevant_doc_list.append(relevant_doc)  ## TODO: don't tensorise in the first place\n",
+    "    irrelevant_doc_list.append(irrelevant_doc) ## TODO: don't tensorise in the first place\n",
+    "# Put them all in one list \n",
+    "# Make this list a tensor\n",
+    "\n",
+    "def pad(list_of_lists):\n",
+    "    # Find the length of the longest list\n",
+    "    max_length = max(len(lst) for lst in list_of_lists)\n",
+    "\n",
+    "    # Pad each list to the max length by adding 0s to the front\n",
+    "    padded_lists = [[0]*(max_length - len(lst)) + lst for lst in list_of_lists]\n",
+    "\n",
+    "    return padded_lists\n",
+    "\n",
+    "print(type(query[0]))\n",
+    "print(type(relevant_doc[0]))\n",
+    "\n",
+    "query_list = torch.tensor(pad(query_list))\n",
+    "relevant_doc_list = torch.tensor(pad(relevant_doc_list))\n",
+    "irrelevant_doc_list = torch.tensor(pad(irrelevant_doc_list))\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 46,
+   "metadata": {},
+   "outputs": [],
    "source": [
     "# Step 3 - Pass data into model \n",
     "criterion = nn.NLLLoss()\n",
     "learning_rate = 0.005 # param, play around with to learn\n",
     "optimizer = torch.optim.SGD(queryRNN.parameters(), lr=learning_rate) #stochastic gradient descent\n",
     "\n",
-    "print(tensor_query_list.shape)\n",
-    "print(tensor_query_list[0].shape)\n",
-    "print(tensor_query_list[0])\n",
-    "output = queryRNN.forward(tensor_query_list)\n",
-    "# output.forward(trainintensor_query_listData[0][0])\n",
-    "\n",
-    "print(output)\n",
-    "\n",
-    "# Step 4 - Evaluate loss function \n"
+    "query_output = queryRNN(query_list)\n",
+    "# output.forward(trainintensor_query_listData[0][0])\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 44,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "# Step 4 - Create Document RNN\n",
+    "documentRNN = fullRNN(input_size, hidden_size, output_size)\n",
+    "\n",
+    "# Step 5 - Run Document RNN\n",
+    "relevant_output = documentRNN(relevant_doc_list)\n",
+    "irrelevant_output = documentRNN(irrelevant_doc_list)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 51,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "torch.Size([18, 100])\n",
+      "torch.Size([12, 100])\n"
+     ]
+    },
+    {
+     "ename": "RuntimeError",
+     "evalue": "The size of tensor a (18) must match the size of tensor b (12) at non-singleton dimension 0",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mRuntimeError\u001b[0m                              Traceback (most recent call last)",
+      "Cell \u001b[0;32mIn[51], line 6\u001b[0m\n\u001b[1;32m      3\u001b[0m \u001b[38;5;28mprint\u001b[39m(query_output\u001b[38;5;241m.\u001b[39msize())\n\u001b[1;32m      4\u001b[0m \u001b[38;5;28mprint\u001b[39m(relevant_output\u001b[38;5;241m.\u001b[39msize())\n\u001b[0;32m----> 6\u001b[0m relevant_similarity \u001b[38;5;241m=\u001b[39m \u001b[43mF\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mcosine_similarity\u001b[49m\u001b[43m(\u001b[49m\u001b[43mquery_output\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mrelevant_output\u001b[49m\u001b[43m)\u001b[49m\n\u001b[1;32m      7\u001b[0m irrelevant_similarity \u001b[38;5;241m=\u001b[39m F\u001b[38;5;241m.\u001b[39mcosine_similarity(query_output, irrelevant_output)\n\u001b[1;32m      9\u001b[0m \u001b[38;5;28mprint\u001b[39m(relevant_similarity)\n",
+      "\u001b[0;31mRuntimeError\u001b[0m: The size of tensor a (18) must match the size of tensor b (12) at non-singleton dimension 0"
+     ]
+    }
+   ],
+   "source": [
+    "\n",
+    "# Step 6 - Create Loss function\n",
+    "\n",
+    "print(query_output.size())\n",
+    "print(relevant_output.size())\n",
+    "\n",
+    "relevant_similarity = F.cosine_similarity(query_output, relevant_output)\n",
+    "irrelevant_similarity = F.cosine_similarity(query_output, irrelevant_output)\n",
+    "\n",
+    "print(relevant_similarity)\n",
+    "print(irrelevant_similarity)\n",
+    "\n",
+    "\n",
+    "# Step 7 - Backpropogate"
+   ]
   }
  ],
  "metadata": {
@@ -277,7 +309,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.5"
+   "version": "3.12.2"
   }
  },
  "nbformat": 4,
