--- a/download_dataset.ipynb
+++ b/download_dataset.ipynb
@@ -2,15 +2,14 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "[nltk_data] Downloading package punkt to\n",
-      "[nltk_data]     /Users/tomioredein/nltk_data...\n",
+      "[nltk_data] Downloading package punkt to /Users/abuchanan/nltk_data...\n",
       "[nltk_data]   Package punkt is already up-to-date!\n"
      ]
     }
@@ -31,19 +30,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# Step 1 - Get the dataset from MS Marco and put into data frame\n",
-    "\n",
-    "training_query_dataset = pd.read_parquet(\"./v1.1-data/train.parquet\") \n",
-    "\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -60,7 +47,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -71,11 +58,6 @@
     "\n",
     "# storing in a dictionairy of form (k,v) - k = query, v = [(rel_doc1, irr_doc1), (rel_doc2, irr_doc2)....,] - this is our negative sampling\n",
     "# query_dataset.head(1).loc[:,\"passages\"][0]['passage_text'][4]\n",
-    "\n",
-    "\n",
-    "\n",
-    "\n",
-    "\n",
     "\n",
     "def clearCorpusFile():\n",
     "    with open('corpus.txt', 'w') as file:    \n",
@@ -126,7 +108,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -135,7 +117,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -182,7 +164,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -202,7 +184,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "sentencepiece_trainer.cc(77) LOG(INFO) Starts training with : \n",
+      "sentencepiece_trainer.cc(78) LOG(INFO) Starts training with : \n",
       "trainer_spec {\n",
       "  input: corpus.txt\n",
       "  input_format: \n",
@@ -253,32 +235,32 @@
       "  normalization_rule_tsv: \n",
       "}\n",
       "denormalizer_spec {}\n",
-      "trainer_interface.cc(351) LOG(INFO) SentenceIterator is not specified. Using MultiFileSentenceIterator.\n",
-      "trainer_interface.cc(183) LOG(INFO) Loading corpus: corpus.txt\n",
-      "trainer_interface.cc(407) LOG(INFO) Loaded all 10801 sentences\n",
-      "trainer_interface.cc(423) LOG(INFO) Adding meta_piece: <unk>\n",
-      "trainer_interface.cc(423) LOG(INFO) Adding meta_piece: <s>\n",
-      "trainer_interface.cc(423) LOG(INFO) Adding meta_piece: </s>\n",
-      "trainer_interface.cc(428) LOG(INFO) Normalizing sentences...\n",
-      "trainer_interface.cc(537) LOG(INFO) all chars count=1019574\n",
-      "trainer_interface.cc(548) LOG(INFO) Done: 99.9501% characters are covered.\n",
-      "trainer_interface.cc(558) LOG(INFO) Alphabet size=92\n",
-      "trainer_interface.cc(559) LOG(INFO) Final character coverage=0.999501\n",
-      "trainer_interface.cc(591) LOG(INFO) Done! preprocessed 10801 sentences.\n",
-      "unigram_model_trainer.cc(222) LOG(INFO) Making suffix array...\n",
-      "unigram_model_trainer.cc(226) LOG(INFO) Extracting frequent sub strings... node_num=582010\n",
-      "unigram_model_trainer.cc(274) LOG(INFO) Initialized 44252 seed sentencepieces\n",
-      "trainer_interface.cc(597) LOG(INFO) Tokenizing input sentences with whitespace: 10801\n",
-      "trainer_interface.cc(608) LOG(INFO) Done! 26160\n",
-      "unigram_model_trainer.cc(564) LOG(INFO) Using 26160 sentences for EM training\n",
-      "unigram_model_trainer.cc(580) LOG(INFO) EM sub_iter=0 size=17064 obj=11.7298 num_tokens=54210 num_tokens/piece=3.17686\n",
-      "unigram_model_trainer.cc(580) LOG(INFO) EM sub_iter=1 size=14679 obj=9.65763 num_tokens=54607 num_tokens/piece=3.72008\n",
-      "unigram_model_trainer.cc(580) LOG(INFO) EM sub_iter=0 size=11005 obj=9.69028 num_tokens=58412 num_tokens/piece=5.30777\n",
-      "unigram_model_trainer.cc(580) LOG(INFO) EM sub_iter=1 size=11002 obj=9.64261 num_tokens=58417 num_tokens/piece=5.30967\n",
-      "unigram_model_trainer.cc(580) LOG(INFO) EM sub_iter=0 size=10969 obj=9.64181 num_tokens=58484 num_tokens/piece=5.33175\n",
-      "unigram_model_trainer.cc(580) LOG(INFO) EM sub_iter=1 size=10967 obj=9.64227 num_tokens=58545 num_tokens/piece=5.33829\n",
-      "trainer_interface.cc(686) LOG(INFO) Saving model: m.model\n",
-      "trainer_interface.cc(698) LOG(INFO) Saving vocabs: m.vocab\n"
+      "trainer_interface.cc(352) LOG(INFO) SentenceIterator is not specified. Using MultiFileSentenceIterator.\n",
+      "trainer_interface.cc(184) LOG(INFO) Loading corpus: corpus.txt\n",
+      "trainer_interface.cc(408) LOG(INFO) Loaded all 10801 sentences\n",
+      "trainer_interface.cc(424) LOG(INFO) Adding meta_piece: <unk>\n",
+      "trainer_interface.cc(424) LOG(INFO) Adding meta_piece: <s>\n",
+      "trainer_interface.cc(424) LOG(INFO) Adding meta_piece: </s>\n",
+      "trainer_interface.cc(429) LOG(INFO) Normalizing sentences...\n",
+      "trainer_interface.cc(538) LOG(INFO) all chars count=1019574\n",
+      "trainer_interface.cc(549) LOG(INFO) Done: 99.9501% characters are covered.\n",
+      "trainer_interface.cc(559) LOG(INFO) Alphabet size=92\n",
+      "trainer_interface.cc(560) LOG(INFO) Final character coverage=0.999501\n",
+      "trainer_interface.cc(592) LOG(INFO) Done! preprocessed 10801 sentences.\n",
+      "unigram_model_trainer.cc(223) LOG(INFO) Making suffix array...\n",
+      "unigram_model_trainer.cc(227) LOG(INFO) Extracting frequent sub strings... node_num=582010\n",
+      "unigram_model_trainer.cc(275) LOG(INFO) Initialized 44252 seed sentencepieces\n",
+      "trainer_interface.cc(598) LOG(INFO) Tokenizing input sentences with whitespace: 10801\n",
+      "trainer_interface.cc(609) LOG(INFO) Done! 26160\n",
+      "unigram_model_trainer.cc(565) LOG(INFO) Using 26160 sentences for EM training\n",
+      "unigram_model_trainer.cc(581) LOG(INFO) EM sub_iter=0 size=17064 obj=11.7298 num_tokens=54210 num_tokens/piece=3.17686\n",
+      "unigram_model_trainer.cc(581) LOG(INFO) EM sub_iter=1 size=14679 obj=9.65763 num_tokens=54607 num_tokens/piece=3.72008\n",
+      "unigram_model_trainer.cc(581) LOG(INFO) EM sub_iter=0 size=11005 obj=9.69028 num_tokens=58412 num_tokens/piece=5.30777\n",
+      "unigram_model_trainer.cc(581) LOG(INFO) EM sub_iter=1 size=11002 obj=9.64261 num_tokens=58417 num_tokens/piece=5.30967\n",
+      "unigram_model_trainer.cc(581) LOG(INFO) EM sub_iter=0 size=10969 obj=9.64181 num_tokens=58484 num_tokens/piece=5.33175\n",
+      "unigram_model_trainer.cc(581) LOG(INFO) EM sub_iter=1 size=10967 obj=9.64227 num_tokens=58545 num_tokens/piece=5.33829\n",
+      "trainer_interface.cc(687) LOG(INFO) Saving model: m.model\n",
+      "trainer_interface.cc(699) LOG(INFO) Saving vocabs: m.vocab\n"
      ]
     },
     {
@@ -337,14 +319,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/var/folders/xs/t9bhbj5d70n1rjzz47skyw_m0000gn/T/ipykernel_69053/3319972402.py:37: UserWarning: Creating a tensor from a list of numpy.ndarrays is extremely slow. Please consider converting the list to a single numpy.ndarray with numpy.array() before converting to a tensor. (Triggered internally at /Users/runner/work/pytorch/pytorch/pytorch/torch/csrc/utils/tensor_new.cpp:278.)\n",
+      "/var/folders/23/2brl0r_s427fhw201248s4l40000gn/T/ipykernel_70924/3319972402.py:37: UserWarning: Creating a tensor from a list of numpy.ndarrays is extremely slow. Please consider converting the list to a single numpy.ndarray with numpy.array() before converting to a tensor. (Triggered internally at /Users/runner/work/_temp/anaconda/conda-bld/pytorch_1708025538153/work/torch/csrc/utils/tensor_new.cpp:278.)\n",
       "  return torch.tensor(embeddings)\n"
      ]
     }
@@ -399,7 +381,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.8"
+   "version": "3.12.2"
   },
   "vscode": {
    "interpreter": {
