Modifies encode and pool function to return list of lists as opposed to tensors

--- a/download_dataset.ipynb
+++ b/download_dataset.ipynb
@@ -157,7 +157,7 @@
     "        else:\n",
     "            # If no word embeddings found (out-of-vocabulary words), use zero vector\n",
     "            embeddings.append(np.zeros(word2vec_model.vector_size))\n",
-    "    return torch.tensor(embeddings)\n",
+    "    return embeddings\n",
     "\n",
     "\n"
    ]
