--- a/TwoTowers.ipynb
+++ b/TwoTowers.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": 72,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -11,12 +11,14 @@
     "import pickle\n",
     "from torch.nn.utils.rnn import pad_sequence, pack_padded_sequence, pad_packed_sequence\n",
     "import torch.nn.functional as F\n",
+    "import pandas as pd\n",
+    "import numpy as np\n",
     "\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 62,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -98,7 +100,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 63,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -152,7 +154,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 64,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -164,27 +166,30 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 53,
+   "execution_count": 76,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
+      "<class 'list'>\n",
+      "<class 'list'>\n",
       "<class 'numpy.ndarray'>\n",
-      "<class 'torch.Tensor'>\n"
+      "<class 'numpy.ndarray'>\n",
+      "814\n",
+      "814\n"
      ]
     },
     {
-     "ename": "TypeError",
-     "evalue": "can only concatenate list (not \"Tensor\") to list",
+     "ename": "ValueError",
+     "evalue": "expected sequence of length 142 at dim 2 (got 139)",
      "output_type": "error",
      "traceback": [
       "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
-      "Cell \u001b[0;32mIn[53], line 27\u001b[0m\n\u001b[1;32m     24\u001b[0m \u001b[38;5;28mprint\u001b[39m(\u001b[38;5;28mtype\u001b[39m(query[\u001b[38;5;241m0\u001b[39m]))\n\u001b[1;32m     25\u001b[0m \u001b[38;5;28mprint\u001b[39m(\u001b[38;5;28mtype\u001b[39m(relevant_doc[\u001b[38;5;241m0\u001b[39m]))\n\u001b[0;32m---> 27\u001b[0m query_list \u001b[38;5;241m=\u001b[39m torch\u001b[38;5;241m.\u001b[39mtensor(\u001b[43mpad\u001b[49m\u001b[43m(\u001b[49m\u001b[43mquery_list\u001b[49m\u001b[43m)\u001b[49m)\n\u001b[1;32m     28\u001b[0m relevant_doc_list \u001b[38;5;241m=\u001b[39m torch\u001b[38;5;241m.\u001b[39mtensor(pad(relevant_doc_list))\n\u001b[1;32m     29\u001b[0m irrelevant_doc_list \u001b[38;5;241m=\u001b[39m torch\u001b[38;5;241m.\u001b[39mtensor(pad(irrelevant_doc_list))\n",
-      "Cell \u001b[0;32mIn[53], line 20\u001b[0m, in \u001b[0;36mpad\u001b[0;34m(list_of_lists)\u001b[0m\n\u001b[1;32m     17\u001b[0m max_length \u001b[38;5;241m=\u001b[39m \u001b[38;5;28mmax\u001b[39m(\u001b[38;5;28mlen\u001b[39m(lst) \u001b[38;5;28;01mfor\u001b[39;00m lst \u001b[38;5;129;01min\u001b[39;00m list_of_lists)\n\u001b[1;32m     19\u001b[0m \u001b[38;5;66;03m# Pad each list to the max length by adding 0s to the front\u001b[39;00m\n\u001b[0;32m---> 20\u001b[0m padded_lists \u001b[38;5;241m=\u001b[39m [\u001b[43m[\u001b[49m\u001b[38;5;241;43m0\u001b[39;49m\u001b[43m]\u001b[49m\u001b[38;5;241;43m*\u001b[39;49m\u001b[43m(\u001b[49m\u001b[43mmax_length\u001b[49m\u001b[43m \u001b[49m\u001b[38;5;241;43m-\u001b[39;49m\u001b[43m \u001b[49m\u001b[38;5;28;43mlen\u001b[39;49m\u001b[43m(\u001b[49m\u001b[43mlst\u001b[49m\u001b[43m)\u001b[49m\u001b[43m)\u001b[49m\u001b[43m \u001b[49m\u001b[38;5;241;43m+\u001b[39;49m\u001b[43m \u001b[49m\u001b[43mlst\u001b[49m \u001b[38;5;28;01mfor\u001b[39;00m lst \u001b[38;5;129;01min\u001b[39;00m list_of_lists]\n\u001b[1;32m     22\u001b[0m \u001b[38;5;28;01mreturn\u001b[39;00m padded_lists\n",
-      "\u001b[0;31mTypeError\u001b[0m: can only concatenate list (not \"Tensor\") to list"
+      "\u001b[0;31mValueError\u001b[0m                                Traceback (most recent call last)",
+      "Cell \u001b[0;32mIn[76], line 41\u001b[0m\n\u001b[1;32m     38\u001b[0m \u001b[38;5;28mprint\u001b[39m(\u001b[38;5;28mlen\u001b[39m(query_list))\n\u001b[1;32m     39\u001b[0m \u001b[38;5;28mprint\u001b[39m(\u001b[38;5;28mlen\u001b[39m(padded_queries))\n\u001b[0;32m---> 41\u001b[0m query_list \u001b[38;5;241m=\u001b[39m \u001b[43mtorch\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mtensor\u001b[49m\u001b[43m(\u001b[49m\u001b[43mpadded_queries\u001b[49m\u001b[43m)\u001b[49m\n\u001b[1;32m     42\u001b[0m relevant_doc_list \u001b[38;5;241m=\u001b[39m torch\u001b[38;5;241m.\u001b[39mtensor(pad(relevant_doc_list))\n\u001b[1;32m     43\u001b[0m irrelevant_doc_list \u001b[38;5;241m=\u001b[39m torch\u001b[38;5;241m.\u001b[39mtensor(pad(irrelevant_doc_list))\n",
+      "\u001b[0;31mValueError\u001b[0m: expected sequence of length 142 at dim 2 (got 139)"
      ]
     }
    ],
@@ -198,7 +203,7 @@
     "# This gives tensor([w1, w2, w3,...wn]) for each individual query\n",
     "# Take the query out of a tensor form and keep as a list\n",
     "# Then iterate over all of the triplets and pull them all out\n",
-    "    query_list.append(torch.tensor(query))\n",
+    "    query_list.append(query)\n",
     "    relevant_doc_list.append(relevant_doc)  ## TODO: don't tensorise in the first place\n",
     "    irrelevant_doc_list.append(irrelevant_doc) ## TODO: don't tensorise in the first place\n",
     "# Put them all in one list \n",
@@ -206,24 +211,38 @@
     "\n",
     "def pad(list_of_lists):\n",
     "    # Find the length of the longest list\n",
-    "    max_length = max(len(lst) for lst in list_of_lists)\n",
+    "    max_length = 0\n",
+    "    for lst in list_of_lists:\n",
+    "        if len(lst) > max_length:\n",
+    "            max_length = len(lst)\n",
+    "            \n",
+    "    # Pad all lists to the same length\n",
+    "    padded_arrays = [np.pad(arr, (max_length - len(arr), 0), 'constant', constant_values=0) for arr in list_of_lists]\n",
     "\n",
-    "    # Pad each list to the max length by adding 0s to the front\n",
-    "    padded_lists = [[0]*(max_length - len(lst)) + lst for lst in list_of_lists]\n",
+    "    return padded_arrays\n",
     "\n",
-    "    return padded_lists\n",
+    "    \n",
+    "\n",
+    "\n",
+    "print(type(query))\n",
+    "print(type(relevant_doc))\n",
     "\n",
     "print(type(query[0]))\n",
     "print(type(relevant_doc[0]))\n",
     "\n",
-    "query_list = torch.tensor(pad(query_list))\n",
+    "padded_queries = pad(query_list)\n",
+    "\n",
+    "print(len(query_list[0]))\n",
+    "print(len(padded_queries[0]))\n",
+    "\n",
+    "query_list = torch.tensor(padded_queries)\n",
     "relevant_doc_list = torch.tensor(pad(relevant_doc_list))\n",
     "irrelevant_doc_list = torch.tensor(pad(irrelevant_doc_list))\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -238,7 +257,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -252,7 +271,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 51,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
