--- a/download_dataset.ipynb
+++ b/download_dataset.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
@@ -30,7 +30,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -47,7 +47,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -108,7 +108,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -117,7 +117,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -127,13 +127,11 @@
     "def tokenise_triplets(triplets_list):\n",
     "    sp = spm.SentencePieceProcessor()\n",
     "    sp.load('m.model')\n",
-    "    return [(sp.encode_as_pieces(query), sp.encode_as_pieces(rel_doc), sp.encode_as_pieces(irr_doc))\n",
-    "                      for (query, rel_doc, irr_doc) in triplets_list]\n",
+    "    return [(sp.encode_as_pieces(query), sp.encode_as_pieces(rel_doc), sp.encode_as_pieces(irr_doc)) for (query, rel_doc, irr_doc) in triplets_list]\n",
     "\n",
     "def generateEmbeddedTriplets(tokenised_triplets):\n",
     "    loaded_model = Word2Vec.load(\"word2vec_model.model\")\n",
-    "    return [(encodeSentence(query, loaded_model), encode_and_pool(rel_doc, loaded_model), encode_and_pool(irr_doc, loaded_model))\n",
-    "                      for (query, rel_doc, irr_doc) in tokenised_triplets]\n",
+    "    return [(encodeSentence(query, loaded_model), encode_and_pool(rel_doc, loaded_model), encode_and_pool(irr_doc, loaded_model)) for (query, rel_doc, irr_doc) in tokenised_triplets]\n",
     "\n",
     "def encodeSentence(query, word2vec_model):\n",
     "    # Query is a list of words\n",
@@ -164,7 +162,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [
     {
@@ -319,24 +317,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 21,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "/var/folders/23/2brl0r_s427fhw201248s4l40000gn/T/ipykernel_70924/3319972402.py:37: UserWarning: Creating a tensor from a list of numpy.ndarrays is extremely slow. Please consider converting the list to a single numpy.ndarray with numpy.array() before converting to a tensor. (Triggered internally at /Users/runner/work/_temp/anaconda/conda-bld/pytorch_1708025538153/work/torch/csrc/utils/tensor_new.cpp:278.)\n",
-      "  return torch.tensor(embeddings)\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# Save\n",
     "\n",
     "\n",
     "embedded_validation_set_values = generateEmbeddedTriplets(validation_tokenised_triplets)\n",
-    "with open('validation_tokenized_triplet.pkl', 'wb') as file:\n",
+    "with open('validation_tokenised_triplets.pkl', 'wb') as file:\n",
     "    pickle.dump(embedded_validation_set_values, file, protocol=pickle.HIGHEST_PROTOCOL)\n",
     "\n",
     "embedded_test_set_values = generateEmbeddedTriplets(test_tokenised_triplets)\n",
