Updated padding function but still no luck, for some reason the dimensions of something are still not right

--- a/TwoTowers.ipynb
+++ b/TwoTowers.ipynb
@@ -166,7 +166,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 76,
+   "execution_count": 88,
    "metadata": {},
    "outputs": [
     {
@@ -175,10 +175,8 @@
      "text": [
       "<class 'list'>\n",
       "<class 'list'>\n",
-      "<class 'numpy.ndarray'>\n",
-      "<class 'numpy.ndarray'>\n",
-      "814\n",
-      "814\n"
+      "<class 'list'>\n",
+      "<class 'list'>\n"
      ]
     },
     {
@@ -188,7 +186,7 @@
      "traceback": [
       "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
       "\u001b[0;31mValueError\u001b[0m                                Traceback (most recent call last)",
-      "Cell \u001b[0;32mIn[76], line 41\u001b[0m\n\u001b[1;32m     38\u001b[0m \u001b[38;5;28mprint\u001b[39m(\u001b[38;5;28mlen\u001b[39m(query_list))\n\u001b[1;32m     39\u001b[0m \u001b[38;5;28mprint\u001b[39m(\u001b[38;5;28mlen\u001b[39m(padded_queries))\n\u001b[0;32m---> 41\u001b[0m query_list \u001b[38;5;241m=\u001b[39m \u001b[43mtorch\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mtensor\u001b[49m\u001b[43m(\u001b[49m\u001b[43mpadded_queries\u001b[49m\u001b[43m)\u001b[49m\n\u001b[1;32m     42\u001b[0m relevant_doc_list \u001b[38;5;241m=\u001b[39m torch\u001b[38;5;241m.\u001b[39mtensor(pad(relevant_doc_list))\n\u001b[1;32m     43\u001b[0m irrelevant_doc_list \u001b[38;5;241m=\u001b[39m torch\u001b[38;5;241m.\u001b[39mtensor(pad(irrelevant_doc_list))\n",
+      "Cell \u001b[0;32mIn[88], line 40\u001b[0m\n\u001b[1;32m     36\u001b[0m \u001b[38;5;28mprint\u001b[39m(\u001b[38;5;28mtype\u001b[39m(relevant_doc_list[\u001b[38;5;241m0\u001b[39m]))\n\u001b[1;32m     38\u001b[0m padded_queries \u001b[38;5;241m=\u001b[39m pad(query_list)\n\u001b[0;32m---> 40\u001b[0m query_list \u001b[38;5;241m=\u001b[39m \u001b[43mtorch\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mtensor\u001b[49m\u001b[43m(\u001b[49m\u001b[43mpadded_queries\u001b[49m\u001b[43m)\u001b[49m\n\u001b[1;32m     41\u001b[0m relevant_doc_list \u001b[38;5;241m=\u001b[39m torch\u001b[38;5;241m.\u001b[39mtensor(pad(relevant_doc_list))\n\u001b[1;32m     42\u001b[0m irrelevant_doc_list \u001b[38;5;241m=\u001b[39m torch\u001b[38;5;241m.\u001b[39mtensor(pad(irrelevant_doc_list))\n",
       "\u001b[0;31mValueError\u001b[0m: expected sequence of length 142 at dim 2 (got 139)"
      ]
     }
@@ -209,31 +207,30 @@
     "# Put them all in one list \n",
     "# Make this list a tensor\n",
     "\n",
-    "def pad(list_of_lists):\n",
+    "def pad(list_of_arrays):\n",
     "    # Find the length of the longest list\n",
     "    max_length = 0\n",
-    "    for lst in list_of_lists:\n",
+    "    for lst in list_of_arrays:\n",
     "        if len(lst) > max_length:\n",
     "            max_length = len(lst)\n",
     "            \n",
     "    # Pad all lists to the same length\n",
-    "    padded_arrays = [np.pad(arr, (max_length - len(arr), 0), 'constant', constant_values=0) for arr in list_of_lists]\n",
+    "    padded_arrays = []\n",
+    "    for arr in list_of_arrays:\n",
+    "        pad_width = max_length - len(arr)\n",
+    "        padded_arr = np.pad(arr, (pad_width, 0), mode='constant', constant_values=0)\n",
+    "        padded_arrays.append(padded_arr)\n",
     "\n",
     "    return padded_arrays\n",
     "\n",
-    "    \n",
     "\n",
+    "print(type(query_list))\n",
+    "print(type(relevant_doc_list))\n",
     "\n",
-    "print(type(query))\n",
-    "print(type(relevant_doc))\n",
-    "\n",
-    "print(type(query[0]))\n",
-    "print(type(relevant_doc[0]))\n",
+    "print(type(query_list[0]))\n",
+    "print(type(relevant_doc_list[0]))\n",
     "\n",
     "padded_queries = pad(query_list)\n",
-    "\n",
-    "print(len(query_list[0]))\n",
-    "print(len(padded_queries[0]))\n",
     "\n",
     "query_list = torch.tensor(padded_queries)\n",
     "relevant_doc_list = torch.tensor(pad(relevant_doc_list))\n",
