--- a/TwoTowers.ipynb
+++ b/TwoTowers.ipynb
@@ -381,6 +381,10 @@
     "input_size = 128\n",
     "hidden_size = 100\n",
     "output_size = 100\n",
+    "num_epochs = 100\n",
+    "\n",
+    "query_tower_learning_rate = 0.005 # param, play around with to learn\n",
+    "document_tower_learning_rate = 0.005 # param, play around with to learn\n",
     "\n",
     "# Step 1 - Create RNN for Query Tower + for Doc tower \n",
     "queryRNN = fullRNN(input_size, hidden_size, output_size)\n",
@@ -407,19 +411,51 @@
     "\n",
     "query_list, relevant_doc_list, irrelevant_doc_list = splitTripletIntoIndividualElements(validationData)\n",
     "\n",
-    "# Step 3 - Pass data into model \n",
-    "criterion = nn.NLLLoss()\n",
-    "learning_rate = 0.005 # param, play around with to learn\n",
-    "optimizer = torch.optim.SGD(queryRNN.parameters(), lr=learning_rate) #stochastic gradient descent\n",
-    "\n",
+    "# Step 4 - Run Query RNN forward pass \n",
     "query_output = queryRNN(query_list)\n",
     "\n",
-    "# Step 4 - Create Document RNN\n",
-    "# documentRNN = fullRNN(input_size, hidden_size, output_size)\n",
-    "\n",
-    "# Step 5 - Run Document RNN\n",
+    "# Step 5 - Run Document RNN forward pass\n",
     "relevant_output = documentRNN(relevant_doc_list)\n",
     "irrelevant_output = documentRNN(irrelevant_doc_list)\n",
+    "\n",
+    "# Step 6 - Train model\n",
+    "\n",
+    "for epoch in range(num_epochs):\n",
+    "    two_towers.train() \n",
+    "    train_loss = 0.0\n",
+    "\n",
+    "    i = 0\n",
+    "    for batch in TrainingDataloader: #We don't have this so its broken \n",
+    "\n",
+    "        # Step 3 - Pass data into model \n",
+    "        criterion = nn.NLLLoss()\n",
+    "        optimizer = torch.optim.SGD(queryRNN.parameters(), lr=query_tower_learning_rate) #stochastic gradient descent\n",
+    "\n",
+    "        i +=1\n",
+    "        optimizer.zero_grad()\n",
+    "\n",
+    "        # Step 4 - Run Query RNN forward pass \n",
+    "        query_output = queryRNN(query_list)\n",
+    "\n",
+    "        # Step 5 - Run Document RNN forward pass\n",
+    "        relevant_output = documentRNN(relevant_doc_list)\n",
+    "        irrelevant_output = documentRNN(irrelevant_doc_list)\n",
+    "\n",
+    "        # Forward pass on main model \n",
+    "        score = two_towers(query_output, relevant_output, irrelevant_output)\n",
+    "      \n",
+    "        # Compute the loss\n",
+    "        # loss = triplet_loss_function_cosine(query_embeddings, relevant_doc_embeddings, irrelevant_doc_embeddings, margin)\n",
+    "\n",
+    "\n",
+    "        loss.backward() #broken\n",
+    "        optimizer.step()\n",
+    "\n",
+    "        train_loss += loss.item() #broken \n",
+    "        if (i) % 10 == 0:\n",
+    "            print(f'Epoch [{epoch+1}/{num_epochs}], Batch: {i}, Train Loss: {loss.item():.4f}')\n",
+    "        \n",
+    "        # break\n",
     "\n",
     "\n",
     "\n",
