--- a/TwoTowers.ipynb
+++ b/TwoTowers.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 185,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -18,7 +18,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 186,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -100,7 +100,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 187,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -119,11 +119,9 @@
     "        The input is a tensor of shape (seq_length, batch_size, input_size)\n",
     "        The seq_length is number of examples\n",
     "        '''\n",
-    "        print(input.size())\n",
     "        \n",
     "        #Initiates the hidden layer for the whole text\n",
     "        hidden = torch.zeros(1, input.size(0), self.hidden_size)\n",
-    "        print(hidden.size())\n",
     "        # hidden=torch.zeros (input.size(1), self.hidden_size)\n",
     "        rnn_output, hidden = self.rnn_cell(input, hidden)\n",
     "        output=self.output_layer(rnn_output[:, -1, :])\n",
@@ -158,7 +156,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 188,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -170,7 +168,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 189,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -248,12 +246,6 @@
     "\n",
     "    padded_queries = pad(query_list)\n",
     "\n",
-    "    for i in range(len(query_list)):\n",
-    "        print(np.array(query_list[i]).shape)\n",
-    "        \n",
-    "    for i in range(len(padded_queries)):\n",
-    "        print(padded_queries[i].shape)\n",
-    "\n",
     "    query_list = torch.tensor(padded_queries).to(torch.float32)\n",
     "    relevant_doc_list = torch.tensor(pad(relevant_doc_list)).to(torch.float32)\n",
     "    irrelevant_doc_list = torch.tensor(pad(irrelevant_doc_list)).to(torch.float32)\n",
@@ -263,18 +255,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 190,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "torch.Size([814, 18, 128])\n",
-      "torch.Size([1, 814, 100])\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# # Step 3 - Pass data into model \n",
     "# criterion = nn.NLLLoss()\n",
@@ -287,20 +270,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 191,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "torch.Size([814, 12, 128])\n",
-      "torch.Size([1, 814, 100])\n",
-      "torch.Size([814, 12, 128])\n",
-      "torch.Size([1, 814, 100])\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# # Step 4 - Create Document RNN\n",
     "# documentRNN = fullRNN(input_size, hidden_size, output_size)\n",
@@ -312,7 +284,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 192,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -339,20 +311,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 195,
    "metadata": {},
    "outputs": [],
    "source": [
     "# Creating two towers architecture \n",
     "\n",
     "class TwoTowers(nn.Module):\n",
-    "    def __init__(self, queryTower, documentTower, margin):\n",
-    "        super(fullRNN, self).__init__()\n",
-    "        self.queryTower = queryTower\n",
-    "        self.documentTower = documentTower\n",
+    "    def __init__(self, input_size, hidden_size, output_size, margin):\n",
+    "        super(TwoTowers, self).__init__()\n",
+    "        self.queryTower = fullRNN(input_size, hidden_size, output_size)\n",
+    "        self.documentTower = fullRNN(input_size, hidden_size, output_size)\n",
     "        self.margin = margin\n",
     "\n",
-    "    def difference_function(vector1, vector2):\n",
+    "    def difference_function(self, vector1, vector2):\n",
     "        return F.cosine_similarity(vector1, vector2)\n",
     "\n",
     "    def triplet_loss_function(self, query_output, relevant_output, irrelevant_output):\n",
@@ -365,33 +337,26 @@
     "        query_output = self.queryTower(query_list)\n",
     "        relevant_output = self.documentTower(relevant_doc_list)\n",
     "        irrelevant_output = self.documentTower(irrelevant_doc_list)\n",
-    "        score = self.triplet_loss_function(query_output, relevant_output, irrelevant_output, self.margin)\n",
+    "        score = self.triplet_loss_function(query_output, relevant_output, irrelevant_output)\n",
     "        return score\n",
     "    "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 196,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Epoch [1/5], Batch: 0, Train Loss: 0.4980\n"
+     ]
+    }
+   ],
    "source": [
-    "# Initialise Two Towers architecture and train\n",
     "\n",
-    "input_size = 128\n",
-    "hidden_size = 100\n",
-    "output_size = 100\n",
-    "num_epochs = 100\n",
-    "\n",
-    "query_tower_learning_rate = 0.005 # param, play around with to learn\n",
-    "document_tower_learning_rate = 0.005 # param, play around with to learn\n",
-    "\n",
-    "# Step 1 - Create RNN for Query Tower + for Doc tower \n",
-    "queryRNN = fullRNN(input_size, hidden_size, output_size)\n",
-    "documentRNN = fullRNN(input_size, hidden_size, output_size)\n",
-    "\n",
-    "margin = 0.5\n",
-    "two_towers = TwoTowers(queryRNN, documentRNN, margin)\n",
     "\n",
     "# Step 2 - Load input data - pickle files have been tokenised by sentence piece and embedded by\n",
     "# Data in format - [tesnor([tensor(query), tensor(rel_docs), tensor(irr_docs)]), .... ]\n",
@@ -411,56 +376,45 @@
     "\n",
     "query_list, relevant_doc_list, irrelevant_doc_list = splitTripletIntoIndividualElements(validationData)\n",
     "\n",
-    "# Step 4 - Run Query RNN forward pass \n",
-    "query_output = queryRNN(query_list)\n",
+    "# # Step 4 - Run Query RNN forward pass \n",
+    "# query_output = queryRNN(query_list)\n",
     "\n",
-    "# Step 5 - Run Document RNN forward pass\n",
-    "relevant_output = documentRNN(relevant_doc_list)\n",
-    "irrelevant_output = documentRNN(irrelevant_doc_list)\n",
+    "# # Step 5 - Run Document RNN forward pass\n",
+    "# relevant_output = documentRNN(relevant_doc_list)\n",
+    "# irrelevant_output = documentRNN(irrelevant_doc_list)\n",
+    "\n",
+    "# Initialise Two Towers Hyperparameters\n",
+    "input_size = 128\n",
+    "hidden_size = 100\n",
+    "output_size = 100\n",
+    "num_epochs = 5\n",
+    "\n",
+    "query_tower_learning_rate = 0.005 # param, play around with to learn\n",
+    "document_tower_learning_rate = 0.005 # param, play around with to learn\n",
+    "two_tower_learning_rate = 0.005\n",
+    "\n",
+    "margin = 0.5\n",
+    "two_towers = TwoTowers(input_size, hidden_size, output_size, margin)\n",
+    "optimizer = torch.optim.Adam(two_towers.parameters(), lr=two_tower_learning_rate)\n",
     "\n",
     "# Step 6 - Train model\n",
-    "\n",
+    "i = 0\n",
     "for epoch in range(num_epochs):\n",
+    "    optimizer.zero_grad()\n",
+    "    \n",
     "    two_towers.train() \n",
     "    train_loss = 0.0\n",
     "\n",
-    "    i = 0\n",
-    "    for batch in TrainingDataloader: #We don't have this so its broken \n",
+    "    # Forward pass on main model \n",
+    "    loss = two_towers(query_list, relevant_doc_list, irrelevant_doc_list)\n",
+    "    loss.backward()\n",
+    "    # optimizer.step()\n",
     "\n",
-    "        # Step 3 - Pass data into model \n",
-    "        criterion = nn.NLLLoss()\n",
-    "        optimizer = torch.optim.SGD(queryRNN.parameters(), lr=query_tower_learning_rate) #stochastic gradient descent\n",
+    "    train_loss += loss.item() #broken \n",
     "\n",
-    "        i +=1\n",
-    "        optimizer.zero_grad()\n",
+    "    print(f'Epoch [{epoch+1}/{num_epochs}], Batch: {i}, Train Loss: {loss.item():.4f}')\n",
     "\n",
-    "        # Step 4 - Run Query RNN forward pass \n",
-    "        query_output = queryRNN(query_list)\n",
-    "\n",
-    "        # Step 5 - Run Document RNN forward pass\n",
-    "        relevant_output = documentRNN(relevant_doc_list)\n",
-    "        irrelevant_output = documentRNN(irrelevant_doc_list)\n",
-    "\n",
-    "        # Forward pass on main model \n",
-    "        score = two_towers(query_output, relevant_output, irrelevant_output)\n",
-    "      \n",
-    "        # Compute the loss\n",
-    "        # loss = triplet_loss_function_cosine(query_embeddings, relevant_doc_embeddings, irrelevant_doc_embeddings, margin)\n",
-    "\n",
-    "\n",
-    "        loss.backward() #broken\n",
-    "        optimizer.step()\n",
-    "\n",
-    "        train_loss += loss.item() #broken \n",
-    "        if (i) % 10 == 0:\n",
-    "            print(f'Epoch [{epoch+1}/{num_epochs}], Batch: {i}, Train Loss: {loss.item():.4f}')\n",
-    "        \n",
-    "        # break\n",
-    "\n",
-    "\n",
-    "\n",
-    "\n",
-    "\n",
+    "    i+=1\n",
     "\n",
     "# Give it the training data for training \n",
     "# Train model \n",
